apps/gateway-apis/gateway-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    nodePort: 30080
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    port: 443
    protocol: HTTPS
    nodePort: 30443
    allowedRoutes:
      namespaces:
        from: All
    hostname: "*.midugh.fr"
    tls:
      mode: Terminate
      certificateRefs: 
      - name: midugh-fr-tls
  - name: https-root
    port: 443
    protocol: HTTPS
    nodePort: 30443
    allowedRoutes:
      namespaces:
        from: All
    hostname: "midugh.fr"
    tls:
      mode: Terminate
      certificateRefs: 
      - name: midugh-fr-tls
